# tls-friend

./: Cargo.toml  LICENSE.txt
src/: async_io.rs  client_connector.rs  connection_builder.rs  lib.rs  test.rs  tls_setup.rs  tls_streams.rs
src/res/: client.crt  client_ca.crt  server.crt  server_ca.crt
